--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 						</div>
 					</section>
 					<div class="copyright">
-						&copy; Abhishek Kumar <a href="https://computerdev.in/">apology
+						&copy; Abhishek Kumar <a href="https://github.com/abhi00o7/apology-website">github</a>
 					</div>
 				</div>
 			</footer>
